# finalproject_Elizarov_M25-555

./: .gitignore  Makefile  README.md  demo_advanced.py  demo_cli.py  demo_complete_system.py  demo_interactive.py  final_test.py  main.py  pyproject.toml  test_advanced_features.py  test_cli.py  test_complete_integration.py  test_final_integration.py  test_fixed_integration.py  test_imports.py  test_interactive.py  test_system.py  test_validation.py
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: __init__.py  interactive.py  interface.py
valutatrade_hub/core/: __init__.py  currencies.py  exceptions.py  models.py  session.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  storage.py  updater.py
