[tool.poetry]
name = "finalproject_elizarov_M25-555"
version = "0.1.0"
description = "ValutaTrade Hub — CLI платформа для симуляции торговли валютами (Core + Parser Service)"
authors = ["Elizarov <elizarov@example.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
